--- a/assets/styles/frontend/common/components/box/info-row.less
+++ b/assets/styles/frontend/common/components/box/info-row.less
@@ -1,14 +1,15 @@
 @box-info-row-bg: #e5e9ec;
 @box-info-row-title-bg: #cdd5da;
 @box-info-row-font-size: @font-size-extra-small + 1px;
-@box-info-row-bottom-gap: 20px;
+@box-info-row-bottom-gap: 25px;
 @box-info-row-min-height: 34px;
 @box-info-row-padding: 20px;
 @box-info-row-padding-horizontal: 12px;
 
 .box-info-row {
     position: relative;
-    display: block;
+    display: flex;
+    flex-direction: column;
     margin-bottom: @box-info-row-bottom-gap;
     min-height: @box-info-row-min-height;
     line-height: 16px;
@@ -22,10 +23,15 @@
     font-weight: 500;
     font-family: @font-alt;
 
+    @media @query-md {
+        flex-direction: row;
+    }
+
     h3 {
-        display: inline-block;
+        display: flex;
+        align-items: center;
+        width: calc(~"100% + @{box-info-row-padding} * 2");
         padding: @box-info-row-padding-horizontal @box-info-row-padding;
-        margin-bottom: -@box-info-row-padding-horizontal;
         margin-top: -@box-info-row-padding-horizontal;
         margin-left: -@box-info-row-padding;
         margin-right: @box-info-row-padding;
@@ -35,7 +41,15 @@
         font-weight: 700;
         font-family: @font-alt;
         font-size: @box-info-row-font-size;
-        border-radius: @radius 0 0 @radius;
+        border-radius: @radius @radius 0 0;
+
+        @media @query-md {
+            width: auto;
+            flex: none;
+            margin-bottom: -@box-info-row-padding-horizontal;
+
+            border-radius: @radius 0 0 @radius;
+        }
     }
 
     a {
