Added correct ID to an element that contains Youtube videos on a detail page of a product with variants.

--- a/templates/Front/Content/Product/boxDetail.html.twig
+++ b/templates/Front/Content/Product/boxDetail.html.twig
@@ -236,7 +236,7 @@
                 </div>
 
                 {% if product.isMainVariant %}
-                    <div class="box-detail__videos">
+                    <div class="box-detail__videos" id="video">
                         {{ self.productYoutubeVideo(youtubeDetails) }}
                     </div>
                 {% endif %}
