--- a/assets/styles/frontend/common/main.less
+++ b/assets/styles/frontend/common/main.less
@@ -63,6 +63,7 @@
 @import "components/in/badge.less";
 @import "components/in/bar-code.less";
 @import "components/in/disable.less";
+@import "components/in/discount-message.less";
 @import "components/in/flag.less";
 @import "components/in/free-transport.less";
 @import "components/in/icon.less";
